--- a/View/Templates/error.twig
+++ b/View/Templates/error.twig
@@ -2,7 +2,9 @@
 
 {% block content %}
     <div class="container">
+        <div class="sidebar padding15   ">
         <p>{{ message|raw }}</p>
+        </div>
     </div>
 {% endblock %}
 
