--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>FredyFramework - {{ title }}</title>
+    <title>Voteplayer - {{ title }}</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -51,21 +51,6 @@
 
 <div class="clearfix"></div>
 
-<footer class="bottom">
-
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12 top10">
-                <p>
-                    <a href="#">Home</a>
-                    <a href="#">Documentation</a>
-                    <a href="#">Tutorials</a>
-                    <a href="#">About</a>
-                </p>
-            </div>
-        </div>
-    </div>
-</footer>
 
 
 <!-- /container -->
