Updated Error and Navigation.

--- a/View/Templates/error.twig
+++ b/View/Templates/error.twig
@@ -3,6 +3,7 @@
 {% block content %}
     <div class="container">
         <div class="sidebar padding15   ">
+        <h2>{{ title|raw }}</h2>
         <p>{{ message|raw }}</p>
         </div>
     </div>
