Updated bootstrap and fontawesome to use local version.

--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -9,8 +9,8 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
-          href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css">
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css"
+          href="/View/Assets/css/bootstrap.min.css">
+    <link href="/View/Assets/css/font-awesome.css"
           rel="stylesheet">
     <link rel="stylesheet" href="{{ offset }}/View/Assets/css/main.css">
     <script src="{{ offset }}/View/Assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
