--- a/View/Templates/demo.twig
+++ b/View/Templates/demo.twig
@@ -1,7 +1,7 @@
 {% extends "index.twig" %}
 
 {% block content %}
-    <div class="container">
+    <div class="container top30">
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-8">
@@ -22,12 +22,9 @@
                         a large language ocean.
                     </p>
 
-                    <p><a class="btn btn-default" href="#" role="button">Read
-                            the
-                            documentation</a></p>
                 </div>
             </div>
-            <div class="col-md-4 ">
+            <div class="col-md-4">
                 <div class="sidebar padding15">
                     <h2>Installation</h2>
 
@@ -38,9 +35,7 @@
                         sentences
                         fly into your mouth. </p>
 
-                    <p><a class="btn btn-default" href="#" role="button">Read
-                            the
-                            installation manual</a></p>
+
                 </div>
             </div>
         </div>
