--- a/View/Templates/error.twig
+++ b/View/Templates/error.twig
@@ -1,7 +1,7 @@
 {% extends "index.twig" %}
 
 {% block content %}
-    <div class="container">
+    <div class="container top30">
         <div class="sidebar padding15   ">
         <h2>{{ title|raw }}</h2>
         <p>{{ message|raw }}</p>
