--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -38,13 +38,34 @@
         </div>
     </div>
 </div>
+<div class="container">
+    <div class="player">
+        <div class="col-md-2 player-options">
+            <i class="fa fa-step-backward"></i>
+            <i class="fa fa-play"></i>
+            <i class="fa fa-step-forward"></i>
+            <span class="time">
+            00:24/02:23
+                </span>
+        </div>
+        <div class="col-md-10">
+            <div class="progress">
+                <div class="progress-bar" role="progressbar" aria-valuenow="60"
+                     aria-valuemin="0" aria-valuemax="100" style="width: 60%;">
+                    <span class="sr-only">60% Complete</span>
+                </div>
+            </div>
+        </div>
+        <div class="clearfix"></div>
+    </div>
+
+</div>
 
 
 
 {% block content %}{% endblock %}
 
 <div class="clearfix"></div>
-
 
 
 <!-- /container -->
