--- a/View/Templates/demo.twig
+++ b/View/Templates/demo.twig
@@ -5,23 +5,27 @@
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-8">
+
                 <div class="playlist padding15">
-                    <h2>Read the documentation</h2>
 
-                    <p>
-                        You best start using the framework by reading the <a
-                                href="#">documentation</a>. Far far away,
-                        behind
-                        the word
-                        mountains, far from the countries Vokalia and
-                        Consonantia,
-                        there live the blind texts. Separated
-                        they
-                        live in Bookmarksgrove right at the coast of the
-                        Semantics,
-                        a large language ocean.
-                    </p>
+                    <div class="row">
+                        <div class="cover col-md-2">
+                            <img src="/View/Assets/img/demo_queen.png"
+                                 alt="Queen"/>
+                        </div>
+                        <div class="voting col-md-1">
+                            <i class="fa fa-caret-up"></i>
+                            12
+                            <i class="fa fa-caret-down"></i>
 
+                        </div>
+                        <div class="song-information col-md-9">
+
+                            Step out<br/>
+                            José González<br/>
+                            Soundtrack: The Live of Walter Mitty
+                        </div>
+                    </div>
                 </div>
             </div>
             <div class="col-md-4">
