--- a/View/Assets/css/main.css
+++ b/View/Assets/css/main.css
@@ -10,6 +10,11 @@ body {
     background: #3498db;
 }
 
+img {
+    max-width: 100%;
+    height: auto;
+}
+
 h1 {
     color: #fff;
     font-size: 80px;
@@ -19,19 +24,23 @@ h1 {
     background: #21618b;
     border: none;
     border-radius: 0;
+    margin-bottom: 0;
 }
 
-
-.navbar-inverse .navbar-nav>.active>a, .navbar-inverse .navbar-nav>.active>a:hover, .navbar-inverse .navbar-nav>.active>a:focus,.navbar-inverse .navbar-nav>li>a:hover {
+.navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > li > a:hover {
     color: #fff;
     background-color: #184665;
 }
 
-.navbar-inverse .navbar-nav>li>a {
+.navbar-nav {
+    margin: 0;
+}
+
+.navbar-inverse .navbar-nav > li > a {
     color: #fff;
 }
 
-.navbar-inverse .navbar-nav>li>a i {
+.navbar-inverse .navbar-nav > li > a i {
     font-size: 34px;
     margin-top: -3px;
     margin-bottom: -5px;
@@ -106,4 +115,69 @@ h1, .h1, h2, .h2, h3, .h3 {
 .playlist {
     background: #3f3f3f;
     color: #fff;
+}
+
+.player {
+    background: #fff;
+}
+
+.progress {
+    margin: 19px 0;
+    border-radius: 0;
+    overflow: visible;
+    background: #c3c4c5;
+    height: 5px;
+}
+
+.progress-bar {
+    float: left;
+    width: 0;
+    height: 5px;
+    font-size: 12px;
+    color: #fff;
+    text-align: center;
+    background-color: #c3c4c5;
+    -webkit-transition: width .6s ease;
+    transition: width .6s ease;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    box-shadow: none;
+    position: relative;
+}
+
+.progress-bar:after {
+    content: '';
+    background: #1F1F1F;
+    height: 7px;
+    width: 7px;
+    display: block;
+    right: 0;
+    top: -1px;
+    position: absolute;
+}
+
+.player-options {
+    font-size: 22px;
+    padding: 5px 15px;
+}
+
+.player-options .time {
+    font-size: 14px;
+    top: -2px;
+    position: relative;
+    margin-left: 5px;
+}
+
+.cover, .voting, .song-information {
+    vertical-align: top;
+    display: inline-block;
+}
+
+.voting {
+    text-align: center;
+}
+
+.voting i {
+    font-size: 28px;
+    display: block;
 }
