--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -30,9 +30,17 @@
 
 </div>
 <div class="container top15">
-    <div class="navbar navbar-inverse " role="navigation">
+    <div class="navbar navbar-inverse" role="navigation">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#main-navbar">
+                <span class="sr-only">Toggle navigation</span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+        </div>
 
-        <div class="navbar-collapse collapse navbar-left" style="height: 1px;">
+        <div class="navbar-collapse collapse navbar-left" id="main-navbar">
             {% import "navigation.twig" as navigationGenerator %}
             {{ navigationGenerator.menu(navigation, 'nav navbar-nav navbar-right', all) }}
         </div>
