--- a/View/Templates/demo.twig
+++ b/View/Templates/demo.twig
@@ -8,22 +8,24 @@
 
                 <div class="playlist padding15">
 
-                    <div class="row">
-                        <div class="cover col-md-2">
+
+                    <div class="media">
+                        <a class="pull-left cover" href="#">
                             <img src="/View/Assets/img/demo_queen.png"
                                  alt="Queen"/>
-                        </div>
-                        <div class="voting col-md-1">
-                            <i class="fa fa-caret-up"></i>
-                            12
-                            <i class="fa fa-caret-down"></i>
+                        </a>
 
-                        </div>
-                        <div class="song-information col-md-9">
-
+                        <div class="media-body">
+                            <div class="voting">
+                                <i class="fa fa-caret-up"></i>
+                                12
+                                <i class="fa fa-caret-down"></i>
+                            </div>
+                            <div class="song-information">
                             Step out<br/>
                             José González<br/>
                             Soundtrack: The Live of Walter Mitty
+                            </div>
                         </div>
                     </div>
                 </div>
