--- a/View/Assets/css/main.css
+++ b/View/Assets/css/main.css
@@ -186,3 +186,32 @@ h1, .h1, h2, .h2, h3, .h3 {
     font-size: 28px;
     display: block;
 }
+
+.users {
+    background: #ffffff;
+}
+
+.fileinput-button {
+    position: relative;
+    overflow: hidden;
+}
+.fileinput-button input {
+    position: absolute;
+    top: 0;
+    right: 0;
+    margin: 0;
+    opacity: 0;
+    -ms-filter: 'alpha(opacity=0)';
+    font-size: 200px;
+    direction: ltr;
+    cursor: pointer;
+}
+
+/* Fixes for IE < 8 */
+@media screen\9 {
+    .fileinput-button input {
+        filter: alpha(opacity=0);
+        font-size: 100%;
+        height: 100%;
+    }
+}
