--- a/View/Assets/css/main.css
+++ b/View/Assets/css/main.css
@@ -207,11 +207,18 @@ h1, .h1, h2, .h2, h3, .h3 {
     cursor: pointer;
 }
 
-/* Fixes for IE < 8 */
-@media screen\9 {
-    .fileinput-button input {
-        filter: alpha(opacity=0);
-        font-size: 100%;
-        height: 100%;
-    }
+ul.nav.nav-tabs {
+    background: #efefef;
+    padding: 0 15px;
+    margin: 0 -15px;
+}
+div.tab-content {
+    margin: 0 -15px -15px -15px;
+    padding: 20px;
+    background: #fff;
+}
+
+.settings {
+
+    background: #efefef;
 }
