--- a/View/Templates/upload.twig
+++ b/View/Templates/upload.twig
@@ -18,26 +18,25 @@
                             <div class="col-lg-12">
                                 <!-- The fileinput-button span is used to style the file input field as button -->
                                 <span class="btn btn-success fileinput-button">
-                                    <i class="glyphicon glyphicon-plus"></i>
+                                    <i class="fa fa-folder-open"></i>
                                     <span>Add files...</span>
                                     <input type="file" name="files[]" multiple="">
                                 </span>
                                 <button type="submit"
                                         class="btn btn-primary start">
-                                    <i class="glyphicon glyphicon-upload"></i>
+                                    <i class="fa fa-upload"></i>
                                     <span>Start upload</span>
                                 </button>
                                 <button type="reset"
                                         class="btn btn-warning cancel">
-                                    <i class="glyphicon glyphicon-ban-circle"></i>
+                                    <i class="fa fa-times"></i>
                                     <span>Cancel upload</span>
                                 </button>
                                 <button type="button"
                                         class="btn btn-danger delete">
-                                    <i class="glyphicon glyphicon-trash"></i>
+                                    <i class="fa fa-trash-o"></i>
                                     <span>Delete</span>
                                 </button>
-                                <input type="checkbox" class="toggle">
                                 <!-- The global file processing state -->
                                 <span class="fileupload-process"></span>
                             </div>
