--- a/View/Templates/users.twig
+++ b/View/Templates/users.twig
@@ -8,6 +8,7 @@
 
                 <div class="users padding15">
                     <h2>Users</h2>
+                    {{ text }}
 
 
                 </div>
