--- a/View/Templates/login.twig
+++ b/View/Templates/login.twig
@@ -1,10 +1,10 @@
 {% extends "index.twig" %}
 
 {% block content %}
-    <div class="container top30">
+    <div class="container ">
         <!-- Example row of columns -->
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 top30">
 
                 <div class="users padding15">
 
@@ -93,7 +93,7 @@
 
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 top30">
                 <div class="sidebar padding15">
                     <h2>Installation</h2>
 
