--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -20,10 +20,10 @@
 <div class="container">
 
     <div class="row">
-        <div class="col-md-8">
+        <div class="col-md-8 col-sm-8 col-xs-8">
             <h1>VotePlayer</h1>
         </div>
-        <div class="col-md-4 text-right user-logged-in">
+        <div class="col-md-4 col-sm-4 col-xs-4 text-right user-logged-in">
             <i class="fa fa-user"></i> Robinio
         </div>
     </div>
