--- a/View/Templates/upload.twig
+++ b/View/Templates/upload.twig
@@ -1,10 +1,10 @@
 {% extends "index.twig" %}
 
 {% block content %}
-    <div class="container top30">
+    <div class="container">
         <!-- Example row of columns -->
         <div class="row">
-            <div class="col-md-8">
+            <div class="col-md-8 top30">
 
                 <div class="users padding15">
                     <h2>Upload</h2>
@@ -60,7 +60,7 @@
                     </form>
                 </div>
             </div>
-            <div class="col-md-4">
+            <div class="col-md-4 top30">
                 <div class="sidebar padding15">
                     <h2>Installation</h2>
 
