Fixed Template bug when using offset.

--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -9,8 +9,8 @@
 
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet"
-          href="/View/Assets/css/bootstrap.min.css">
-    <link href="/View/Assets/css/font-awesome.css"
+          href="{{ offset }}/View/Assets/css/bootstrap.min.css">
+    <link href="{{ offset }}/View/Assets/css/font-awesome.css"
           rel="stylesheet">
     <link rel="stylesheet" href="{{ offset }}/View/Assets/css/main.css">
     <script src="{{ offset }}/View/Assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
@@ -78,7 +78,7 @@
 
 <!-- /container -->
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<script>window.jQuery || document.write('<script src="../Assets/js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
+<script>window.jQuery || document.write('<script src="{{ offset }}/Assets/js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
 
 <script src="{{ offset }}/View/Assets/js/vendor/bootstrap.min.js"></script>
 
