Fixed Template bug when using offset.

--- a/View/Templates/overview.twig
+++ b/View/Templates/overview.twig
@@ -11,7 +11,7 @@
 
                     <div class="media">
                         <a class="pull-left cover" href="#">
-                            <img src="/View/Assets/img/demo_queen.png"
+                            <img src="{{ offset }}/View/Assets/img/demo_queen.png"
                                  alt="Queen"/>
                         </a>
 
