Fixed Template bug when using offset.

--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -42,7 +42,7 @@
 
         <div class="navbar-collapse collapse navbar-left" id="main-navbar">
             {% import "navigation.twig" as navigationGenerator %}
-            {{ navigationGenerator.menu(navigation, 'nav navbar-nav navbar-right', all) }}
+            {{ navigationGenerator.menu(navigation, 'nav navbar-nav navbar-right', all, offset) }}
         </div>
     </div>
 </div>
