--- a/View/Templates/navigation.twig
+++ b/View/Templates/navigation.twig
@@ -1,15 +1,15 @@
-{% macro menu(navigation, menuid, all) %}
+{% macro menu(navigation, menuid, all, offset) %}
     <ul class="{{ menuid }}">
         {% for link in navigation %}
             <li {% if link.active %} class="{% if link.children %}dropdown {% endif %}{{ link.active_class }}" {% endif %}>
                 <a {% if link.children %} class="dropdown-toggle"   {% endif %}
-                        href="{{ link.url }}">{{ link.text|raw }}
+                        href="{{ offset }}{{ link.url }}">{{ link.text|raw }}
                     {% if link.children %}
                         <b class="caret"></b>
                     {% endif %}
                 </a>
                 {% if link.children %}
-                    {{ _self.menu(link.children, 'dropdown-menu', all) }}
+                    {{ _self.menu(link.children, 'dropdown-menu', all, offset) }}
                 {% endif %}
             </li>
         {% endfor %}
