--- a/View/Templates/upload.twig
+++ b/View/Templates/upload.twig
@@ -1,6 +1,83 @@
 {% extends "index.twig" %}
 
 {% block content %}
+    <script id="template-upload" type="text/x-tmpl">
+        {% raw %}
+   {% for (var i=0, file; file=o.files[i]; i++) { %}
+    <tr class="template-upload fade">
+        <td>
+            <span class="preview"></span>
+        </td>
+        <td>
+            <p class="name">{%=file.name%}</p>
+            <strong class="error text-danger"></strong>
+        </td>
+        <td>
+            <p class="size">Processing...</p>
+            <div class="progress progress-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" aria-valuenow="0"><div class="progress-bar progress-bar-success" style="width:0%;"></div></div>
+        </td>
+        <td>
+            {% if (!i && !o.options.autoUpload) { %}
+                <button class="btn btn-primary start" disabled>
+                    <i class="glyphicon glyphicon-upload"></i>
+                    <span>Start</span>
+                </button>
+            {% } %}
+            {% if (!i) { %}
+                <button class="btn btn-warning cancel">
+                    <i class="glyphicon glyphicon-ban-circle"></i>
+                    <span>Cancel</span>
+                </button>
+            {% } %}
+        </td>
+    </tr>
+{% } %}
+{% endraw %}
+    </script>
+    <script id="template-download" type="text/x-tmpl">
+        {% raw %}
+    {% for (var i=0, file; file=o.files[i]; i++) { %}
+    <tr class="template-download fade">
+        <td>
+            <span class="preview">
+                {% if (file.thumbnailUrl) { %}
+                    <a href="{%=file.url%}" title="{%=file.name%}" download="{%=file.name%}" data-gallery><img src="{%=file.thumbnailUrl%}"></a>
+                {% } %}
+            </span>
+        </td>
+        <td>
+            <p class="name">
+                {% if (file.url) { %}
+                    <a href="{%=file.url%}" title="{%=file.name%}" download="{%=file.name%}" {%=file.thumbnailUrl?'data-gallery':''%}>{%=file.name%}</a>
+                {% } else { %}
+                    <span>{%=file.name%}</span>
+                {% } %}
+            </p>
+            {% if (file.error) { %}
+                <div><span class="label label-danger">Error</span> {%=file.error%}</div>
+            {% } %}
+        </td>
+        <td>
+            <span class="size">{%=o.formatFileSize(file.size)%}</span>
+        </td>
+        <td>
+            {% if (file.deleteUrl) { %}
+                <button class="btn btn-danger delete" data-type="{%=file.deleteType%}" data-url="{%=file.deleteUrl%}"{% if (file.deleteWithCredentials) { %} data-xhr-fields='{"withCredentials":true}'{% } %}>
+                      <i class="fa fa-trash-o"></i>
+                    <span>Delete</span>
+                </button>
+                <input type="checkbox" name="delete" value="1" class="toggle">
+            {% } else { %}
+                <button class="btn btn-warning cancel">
+                    <i class="glyphicon glyphicon-ban-circle"></i>
+                    <span>Cancel</span>
+                </button>
+            {% } %}
+        </td>
+    </tr>
+{% } %}
+{% endraw %}
+    </script>
     <div class="container">
         <!-- Example row of columns -->
         <div class="row">
@@ -8,9 +85,9 @@
 
                 <div class="users padding15">
                     <h2>Upload</h2>
-                    <a href="http://blueimp.github.io/jQuery-File-Upload/index.html">jQuery File Uploader</a>
+
                     <form id="fileupload"
-                          action="//jquery-file-upload.appspot.com/"
+                          action="{{ offset }}/AddMusic/UploadHandler"
                           method="POST" enctype="multipart/form-data">
                         <!-- Redirect browsers with JavaScript disabled to the origin page -->
                         <!-- The fileupload-buttonbar contains buttons to add/delete files and start/cancel the upload -->
@@ -20,7 +97,8 @@
                                 <span class="btn btn-success fileinput-button">
                                     <i class="fa fa-folder-open"></i>
                                     <span>Add files...</span>
-                                    <input type="file" name="files[]" multiple="">
+                                    <input type="file" name="files[]"
+                                           multiple="">
                                 </span>
                                 <button type="submit"
                                         class="btn btn-primary start">
@@ -58,6 +136,37 @@
                             <tbody class="files"></tbody>
                         </table>
                     </form>
+                    <script src="{{ offset }}/View/Assets/js/vendor/vendor/jquery.ui.widget.js"></script>
+                    <!-- The Templates plugin is included to render the upload/download listings -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/tmpl.js"></script>
+                    <!-- The Load Image plugin is included for the preview images and image resizing functionality -->
+                    <script src="http://blueimp.github.io/JavaScript-Load-Image/js/load-image.min.js"></script>
+                    <!-- The Canvas to Blob plugin is included for image resizing functionality -->
+                    <script src="http://blueimp.github.io/JavaScript-Canvas-to-Blob/js/canvas-to-blob.min.js"></script>
+                    <!-- Bootstrap JS is not required, but included for the responsive demo navigation -->
+                    <!-- blueimp Gallery script -->
+                    <script src="http://blueimp.github.io/Gallery/js/jquery.blueimp-gallery.min.js"></script>
+                    <!-- The Iframe Transport is required for browsers without support for XHR file uploads -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/jquery.iframe-transport.js"></script>
+                    <!-- The basic File Upload plugin -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/jquery.fileupload.js"></script>
+                    <!-- The File Upload processing plugin -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/jquery.fileupload-process.js"></script>
+                    <!-- The File Upload image preview & resize plugin -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/jquery.fileupload-image.js"></script>
+                    <!-- The File Upload audio preview plugin -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/jquery.fileupload-audio.js"></script>
+                    <!-- The File Upload video preview plugin -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/jquery.fileupload-video.js"></script>
+                    <!-- The File Upload validation plugin -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/jquery.fileupload-validate.js"></script>
+                    <!-- The File Upload user interface plugin -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/jquery.fileupload-ui.js"></script>
+                    <!-- The main application script -->
+                    <script src="{{ offset }}/View/Assets/js/vendor/main.js"></script>
+
+                    <a href="http://blueimp.github.io/jQuery-File-Upload/index.html">jQuery
+                        File Uploader</a>
                 </div>
             </div>
             <div class="col-md-4 top30">
