--- a/View/Templates/upload.twig
+++ b/View/Templates/upload.twig
@@ -1,7 +1,7 @@
 {% extends "index.twig" %}
 
 {% block content %}
-    <script id="template-upload" type="text/x-tmpl">
+<script id="template-upload" type="text/x-tmpl">
         {% raw %}
    {% for (var i=0, file; file=o.files[i]; i++) { %}
     <tr class="template-upload fade">
@@ -30,8 +30,8 @@
     </tr>
 {% } %}
 {% endraw %}
-    </script>
-    <script id="template-download" type="text/x-tmpl">
+</script>
+<script id="template-download" type="text/x-tmpl">
         {% raw %}
     {% for (var i=0, file; file=o.files[i]; i++) { %}
     <tr class="template-download fade">
@@ -68,15 +68,16 @@
     </tr>
 {% } %}
 {% endraw %}
-    </script>
+</script>
     <div class="container">
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-8 top30">
 
-                <div class="users padding15">
+                <div class="title padding15">
                     <h2>Upload</h2>
-
+                </div>
+                <div class="users padding15">
                     <form id="fileupload"
                           action="{{ offset }}/AddMusic/UploadHandler"
                           method="POST" enctype="multipart/form-data">
