--- a/View/Templates/user.twig
+++ b/View/Templates/user.twig
@@ -6,9 +6,10 @@
         <div class="row">
             <div class="col-md-8 top30">
 
-                <div class="users padding15">
+                <div class="title padding15">
                     <h2>Edit User</h2>
-
+                </div>
+                <div class="users padding15">
                     <form class="form-horizontal">
                         <fieldset>
 
