--- a/View/Templates/users.twig
+++ b/View/Templates/users.twig
@@ -6,8 +6,10 @@
         <div class="row">
             <div class="col-md-8 top30">
 
-                <div class="users padding15">
+                <div class="title padding15">
                     <h2>Users</h2>
+                </div>
+                <div class="users padding15">
                     <a class="btn btn-primary" href="{{ offset }}/Users/Add">Add User</a>
                     <div class="table-responsive">
                         <table class="table table-hover table-striped">
