--- a/View/Templates/upload.twig
+++ b/View/Templates/upload.twig
@@ -107,6 +107,8 @@
                                     <i class="fa fa-trash-o"></i>
                                     <span>Delete</span>
                                 </button>
+
+                                <input type="checkbox" class="toggle">
                                 <!-- The global file processing state -->
                                 <span class="fileupload-process"></span>
                             </div>
