--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -67,7 +67,7 @@
                 {#</span>#}
         {#</div>#}
         <div class="col-md-12 nopadding">
-            <audio width="100%" src="{{ offset }}/Music/Aqualung - Easier To Lie.mp3"></audio>
+            <audio width="100%" src="{{ offset }}/Music/Hall of the Mountain King.mp3"></audio>
         </div>
         <div class="clearfix"></div>
     </div>
