--- a/View/Assets/css/main.css
+++ b/View/Assets/css/main.css
@@ -25,6 +25,7 @@ h1 {
     border: none;
     border-radius: 0;
     margin-bottom: 0;
+    z-index: 10;
 }
 
 .navbar-inverse .navbar-nav > .active > a, .navbar-inverse .navbar-nav > .active > a:hover, .navbar-inverse .navbar-nav > .active > a:focus, .navbar-inverse .navbar-nav > li > a:hover {
