Added offset to javascript.

--- a/View/Templates/index.twig
+++ b/View/Templates/index.twig
@@ -13,13 +13,15 @@
     <link href="{{ offset }}/View/Assets/css/font-awesome.css"
           rel="stylesheet">
     <link rel="stylesheet" href="{{ offset }}/View/Assets/css/main.css">
+    <script>
+        window.fredyframework = {};
+        window.fredyframework.offset = '{{ offset }}';
+    </script>
     <script src="{{ offset }}/View/Assets/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
     <!-- /container -->
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script>window.jQuery || document.write('<script src="{{ offset }}/Assets/js/vendor/jquery-1.11.0.min.js"><\/script>')</script>
-
     <script src="{{ offset }}/View/Assets/js/vendor/bootstrap.min.js"></script>
-
     <script src="{{ offset }}/View/Assets/js/mediaelement/mediaelement-and-player.js"></script>
     <link rel="stylesheet" href="{{ offset }}/View/Assets/css/voteplayer-theme.css" />
     <script src="{{ offset }}/View/Assets/js/main.js"></script>
