--- a/View/Templates/user.twig
+++ b/View/Templates/user.twig
@@ -20,7 +20,7 @@
 
                                 <div class="col-md-4">
                                     <input id="textinput" name="textinput" type="text"
-                                           placeholder="placeholder"
+                                           placeholder="Username"
                                            class="form-control input-md">
                                     <span class="help-block">Only characters and numbers.</span>
                                 </div>
@@ -32,7 +32,7 @@
 
                                 <div class="col-md-4">
                                     <input id="textinput" name="textinput" type="password"
-                                           placeholder="placeholder"
+                                           placeholder="Password"
                                            class="form-control input-md">
                                     <span class="help-block">At least 6 Characters</span>
                                 </div>
@@ -69,8 +69,9 @@
                                 <div class="col-md-4">
                                     <select id="selectbasic" name="selectbasic"
                                             class="form-control" multiple>
-                                        <option value="1">Option one</option>
-                                        <option value="2">Option two</option>
+                                        <option value="1">Administrator</option>
+                                        <option value="2">User</option>
+                                        <option value="2">Moderator</option>
                                     </select>
                                 </div>
                             </div>
