--- a/View/Templates/users.twig
+++ b/View/Templates/users.twig
@@ -35,17 +35,22 @@
                         </table>
 
                     </div>
+                    <ul class="pagination">
+                        <li><a href="#">&laquo;</a></li>
+                        <li><a href="#">1</a></li>
+                        <li><a href="#">2</a></li>
+                        <li><a href="#">3</a></li>
+
+                        for() {
+                        <li><a href="#">4</a></li>
+                        }
+                        <li><a href="#">&raquo;</a></li>
+
+                    </ul>
+
 
                 </div>
-                <ul class="pagination">
-                    <li><a href="#">&laquo;</a></li>
-                    <li><a href="#">1</a></li>
-                    <li><a href="#">2</a></li>
-                    <li><a href="#">3</a></li>
-                    <li><a href="#">4</a></li>
-                    <li><a href="#">5</a></li>
-                    <li><a href="#">&raquo;</a></li>
-                </ul>
+
             </div>
             <div class="col-md-4 top30">
                 <div class="sidebar padding15">
